--- a/leftHand_is.css
+++ b/leftHand_is.css
@@ -24,7 +24,7 @@ body {
     background-color: blue;
     width: 100px; 
     height: 100px;
-    margin: 10px;
+    margin: auto;
     border-radius: 10px;
 }
 
